--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -3,22 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catalogo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
+    <title>Catalogo</title>
 </head>
 <body> 
     <header>
-        <h2 style="text-align: center;">Catalogo</h2>
+        <h1 style="text-align: center;">Catalogo</h1>
             <nav>
                 <ul>
-                    <li><a href="./carpeta de catalogo/adidas.html">Adidas</a></li>
-                    <li><a href="./carpeta de catalogo/nike.html">Nike</a></li>
-                    <li><a href="./carpeta de catalogo/vans.html">Vans</a></li>
-                    <li><a href="./carpeta de catalogo/convers.html">Convers</a></li>
+                    <li><a href="#sec1">Adidas</a></li>
+                    <li><a href="#sec2">Nike</a></li>
+                    <li><a href="#sec3">Vans</a></li>
+                    <li><a href="#sec4">Convers</a></li>
                 </ul>
             </nav>
     </header>
-    <a href="../index.html">volver al Inicio</a>
+    <h2 id="sec1">ADIDAS</h2>
+    <section class="sec sec1">
+        <div class="caja caja1">adidas1</div>
+        <div class="caja caja2">adidas2</div>
+        <div class="caja caja3">adidas3</div>
+        <div class="caja caja4">adidas3</div>
+        
+    </section>
     
+    <h2 id="sec2">NIKE</h2>
+    <section class="sec sec2">
+        <div class="caja caja5">nike1</div>
+        <div class="caja caja6">nike2</div>
+        <div class="caja caja7">nike3</div>
+        <div class="caja caja8">nike3</div>
+    </section>
+
+    <h2 id="sec3">VANS</h2>
+    <section class="sec sec3">
+        <div class="caja caja9">vans1</div>
+        <div class="caja caja10">vans2</div>
+        <div class="caja caja11">vans3</div>
+        <div class="caja caja12">vans3</div>
+    </section>
+
+    <h2 id="sec4">CONVERS</h2>
+    <section class="sec sec4">
+        <div class="caja caja13">conv1</div>
+        <div class="caja caja14">conv2</div>
+        <div class="caja caja15">conv3</div>
+        <div class="caja caja16">conv3</div>
+    </section>
+    <a href="../index.html">volver al Inicio</a>
+    <footer>
+        <p>&copy; 2024 AFFRA. Todos los derechos reservados.</p> <!-- Información de los derechos reservados -->
+        <div class="redes">
+            <a href="https://www.instagram.com/affra.calzados?igsh=ODFrNjB5czh0ZTVm">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/share/1JqNBaHSmB/?mibextid=LQQJ4d">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+        </div>
+    </footer>
+    <a href="" class="subir">
+        <i class="fa-solid fa-sort-up fa-bounce" style="color: #080808;"></i>
+    </a>
 </body>
 </html>
