--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Nosotros</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -20,6 +21,19 @@
         4v1733816005868!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" 
         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
-   
+    <footer>
+        <p>&copy; 2024 AFFRA. Todos los derechos reservados.</p> <!-- Información de los derechos reservados -->
+        <div class="redes">
+            <a href="https://www.instagram.com/affra.calzados?igsh=ODFrNjB5czh0ZTVm">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/share/1JqNBaHSmB/?mibextid=LQQJ4d">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
