--- a/pages/contactanos.html
+++ b/pages/contactanos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section id="contact">
+    <section class="contact">
         <h2>Contacto</h2>
         <form>
             <label for="name">Nombre:</label>
