--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <section>
+    <section class="nosotros">
         <h2>Estamos para atenderte</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
         Laudantium quod aliquid itaque veritatis, optio qui 
